Fixed vertical alignment on mobile

--- a/main.css
+++ b/main.css
@@ -8,8 +8,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   font-family: monospace;
   font-size: 13px;
   line-height: 20px;
